syntax = "proto3";

package calendar;
import "proto/event/event.proto";

option go_package = "server";

service CalendarEvent {
    rpc AddEvent (AddEventRequest) returns (AddEventResponse);
    rpc GetEvent (GetEventRequest) returns (GetEventResponse);
    rpc UpdateEvent (UpdateEventRequest) returns (UpdateEventResponse);
    rpc DeleteEvent (DeleteEventRequest) returns (DeleteEventResponse);
}

message AddEventRequest {
    event.Event event = 1;
}

message AddEventResponse {
    oneof result {
        event.Event event = 1;
        string error = 2;
    }
}


message GetEventRequest {
    string id = 1;
}

message GetEventResponse {
    oneof result {
        event.Event event = 1;
        string error = 2;
    }
}


message UpdateEventRequest {
    event.Event event = 1;
}

message UpdateEventResponse {
    oneof result {
        event.Event event = 1;
        string error = 2;
    }
}

message DeleteEventRequest {
    string id = 1;
}

message DeleteEventResponse {
    string status = 1;
}